--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,8 +1,10 @@
 .header {
   grid-area: h;
-  background-color: red;
+  background-color: #964C63;
+  display: flex;
+  align-items: center;
 }
 
 .header img {
-  width: 50px;
+  height: 50px;
 }
