--- a/src/components/Styleguide/Styleguide.scss
+++ b/src/components/Styleguide/Styleguide.scss
@@ -5,7 +5,7 @@ $font: "Roboto", Sans-serif;
 $titleColor: #002439;
 $textColor: #7a7aa5;
 $activeColor: #964c63;
-$border: 1px solid #DCC2CB;
+$border: 1px solid #dcc2cb;
 $activeTextWeight: 700;
 
 h1 {
@@ -24,4 +24,19 @@ h2 {
   border-radius: 5px;
   padding: 8px 16px;
   font-weight: 800;
+}
+
+ul {
+  list-style-type: none;
+}
+
+li a {
+  text-decoration: none;
+  font-size: 1.2rem;
+  color: $textColor;
+}
+
+li a.active {
+  color: #964c63;
+  font-weight: $activeTextWeight;
 }
