refactor: transform Users in class component

--- a/src/components/Users/Users.module.scss
+++ b/src/components/Users/Users.module.scss
@@ -9,7 +9,7 @@
   padding: 10px;
 }
 
-ul {
+.userInfo ul {
     padding: 0;
     margin: 0;
 }
@@ -30,6 +30,6 @@ h2 {
 }
 
 .button {
-    width: 100px;
+    // width: 100px;
     margin-top: 10px;
 }
