feat: add button disable

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,10 +1,16 @@
 .header {
   grid-area: h;
-  background-color: #964C63;
-  display: flex;
-  align-items: center;
+  background-color: #964c63;
 }
 
 .header img {
   height: 50px;
+}
+
+.headerWrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  padding: 0 20px;
 }
