--- a/src/components/Styleguide/Styleguide.scss
+++ b/src/components/Styleguide/Styleguide.scss
@@ -24,6 +24,9 @@ h2 {
   border-radius: 5px;
   padding: 8px 16px;
   font-weight: 800;
+  &:disabled {
+    background-color: #dcc2cb;
+  }
 }
 
 ul {
